tests position image, horloge ok

--- a/SolarSystem.html
+++ b/SolarSystem.html
@@ -8,6 +8,14 @@
     <script src="SolarSystem.js"></script>
 </head>
 <body>
-    <p> <a href="https://api.le-systeme-solaire.net/rest/bodies/{Earth}">Test</a></p>
+    <h1><div id='date' class='end'></div></h1>
+    <h1><div id='heure' class='end'></div></h1>
+
+    <p> <a href="https://api.le-systeme-solaire.net/rest/bodies/{Earth}">API</a>
+    </p>
+
+    <div id="carte"><img id="soleil" src="images/soleil.png"/></div>
+
+    
 </body>
 </html>
