test API en cours

--- a/SolarSystem.html
+++ b/SolarSystem.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="SolarSystem.css">
+    <script src="https://api.le-systeme-solaire.net/rest/bodies/"></script>
     <script src="SolarSystem.js"></script>
 </head>
 <body>
-    <p> <a href="https://api.le-systeme-solaire.net/rest/bodies/{Earth}">Test</a></p>
+    <input type="button" value="Sun" onclick="buttonClickGET()" />
+    <p id="Zone Astre">Test</p>
 </body>
 </html>
