appel API terminé

--- a/SolarSystem.html
+++ b/SolarSystem.html
@@ -9,7 +9,8 @@
     <script src="SolarSystem.js"></script>
 </head>
 <body>
-    <input type="button" value="Sun" onclick="buttonClickGET()" />
-    <p id="Zone Astre">Test</p>
+      <div class="planets-container" id="planets-container">
+        <!-- Les planètes seront insérées ici -->
+      </div>
 </body>
 </html>
