--- a/SolarSystem.html
+++ b/SolarSystem.html
@@ -8,6 +8,16 @@
     <script src="SolarSystem.js"></script>
 </head>
 <body>
-    <p> <a href="https://api.le-systeme-solaire.net/rest/bodies/{Earth}">Test</a></p>
+    <p> <a href="https://api.le-systeme-solaire.net/rest/bodies/{Earth}">Test</a></p> 
+    <div id="carte"><img id="photo_espace_1" src="dossier-planetes/photo_espace_1.png"/></div>
+    <div id="carte"><img id="soleil" src="dossier-planetes/soleil.png"></div>
+    <div id="carte"><img id="mercure" src="dossier-planetes/mercure.png"/></div>
+    <div id="carte"><img id="venus" src="dossier-planetes/venus.png"/></div>
+    <div id="carte"><img id="terre" src="dossier-planetes/terre.png"/></div>
+    <div id="carte"><img id="mars" src="dossier-planetes/mars.png"/></div>
+    <div id="carte"><img id="jupiter" src="dossier-planetes/modif_jupiter.png"/></div>
+    <div id="carte"><img id="saturne" src="dossier-planetes/saturne.png"/></div>
+    <div id="carte"><img id="uranus" src="dossier-planetes/uranus.png"/></div>
+    <div id="carte"><img id="neptune" src="dossier-planetes/neptune.png"/></div>
 </body>
 </html>
