fond mis à jour

--- a/SolarSystem.html
+++ b/SolarSystem.html
@@ -10,13 +10,9 @@
 </head>
 <body>
     <h1><div id='date' class='end'></div></h1>
-    <h1><div id='heure' class='end'></div></h1>
-
-    <p> <a href="https://api.le-systeme-solaire.net/rest/bodies/{Earth}">API</a>
-    </p>
-
+    <!-- <h1><div id='heure' class='end'></div></h1> -->
       
-    <div id="carte"><img id="photo_espace_1" src="dossier-planetes/photo_espace_1.png"/></div>
+    <!-- <div id="carte"><img id="photo_espace_1" src="dossier-planetes/photo_espace_1.png"/></div> -->
     <div id="carte"><img id="soleil" src="dossier-planetes/soleil.png"></div>
     <div id="carte"><img id="mercure" src="dossier-planetes/mercure.png"/></div>
     <div id="carte"><img id="venus" src="dossier-planetes/venus.png"/></div>
