--- a/SolarSystem.html
+++ b/SolarSystem.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1><div id='date' class='end'></div></h1>
-    <!-- <h1><div id='heure' class='end'></div></h1> -->
+    <h1><div id='heure' class='end'></div></h1>
       
     <!-- <div id="carte"><img id="photo_espace_1" src="dossier-planetes/photo_espace_1.png"/></div> -->
     <div id="carte"><img id="soleil" src="dossier-planetes/soleil.png"></div>
