--- a/SolarSystem.html
+++ b/SolarSystem.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1><div id='date' class='end'></div></h1>
-    <h1><div id='heure' class='end'></div></h1>
+    <!-- <h1><div id='heure' class='end'></div></h1> -->
       
     <!-- <div id="carte"><img id="photo_espace_1" src="dossier-planetes/photo_espace_1.png"/></div> -->
     <div id="carte"><img id="soleil" src="dossier-planetes/soleil.png"></div>
@@ -22,5 +22,7 @@
     <div id="carte"><img id="saturne" src="dossier-planetes/saturne.png"/></div>
     <div id="carte"><img id="uranus" src="dossier-planetes/uranus.png"/></div>
     <div id="carte"><img id="neptune" src="dossier-planetes/neptune.png"/></div>
+
+   
 </body>
 </html>
