--- a/SolarSystem.html
+++ b/SolarSystem.html
@@ -22,5 +22,6 @@
     <div id="carte"><img id="saturne" src="dossier-planetes/saturne.png"/></div>
     <div id="carte"><img id="uranus" src="dossier-planetes/uranus.png"/></div>
     <div id="carte"><img id="neptune" src="dossier-planetes/neptune.png"/></div>
+    <div id="carte"><img id="ceinture" src="dossier-planetes/ceinture-astéroide.png"/></div>
 </body>
 </html>
